<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/together_group"
        android:checkableBehavior="single">
        <group
            android:id="@+id/first_group"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_notes"
                android:title="@string/nav_notes"
                android:icon="@drawable/ic_notes_24px"
                android:checked="true"/>
            <item
                android:id="@+id/nav_notifications"
                android:title="@string/nav_notifications"
                android:icon="@drawable/ic_notifications_24px" />
        </group>

        <group
            android:id="@+id/second_group"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_archive"
                android:title="@string/nav_archive"
                android:icon="@drawable/ic_archive_24px" />
            <item
                android:id="@+id/nav_trash"
                android:icon="@drawable/ic_delete_24px"
                android:title="@string/nav_trash" />
        </group>
    </group>

</menu>